--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,50 @@
-#board {
-  margin-top: 10px;
+body {
+  font-family: "Goudy Bookletter 1911", sans-serif;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 50px;
+  color: #292;
+  text-shadow: -1px -1px #334;
+  background: #334;
 }
-
-.box {
-  border: 1px solid black;
-  height: 150px;
+body h1 {
+  font-weight: normal;
+}
+body .turn {
+  margin-bottom: 10px;
+}
+body table {
+  border-collapse: collapse;
+  width: 600px;
+  margin: 0 auto;
+}
+body table td {
+  width: 600px;
+  height: 200px;
+  border: 20px solid #DF0;
+  cursor: pointer;
+}
+body table td:before {
+  font-size: 10.5em;
+  line-height: 1;
+}
+body table td.cross:before {
+  content: "x";
+  color: lightblue;
+}
+body table td.circle:before {
+  content: "o";
+  color: pink;
+}
+body .reset {
+  background: #555;
+  border: 1px solid #292;
+  padding: 5px 10px;
+  color: #292;
+  cursor: pointer;
+  font-family: "Roboto", Arial, sans-serif;
+  text-transform: uppercase;
+}
+body .reset:hover {
+  opacity: 0.8;
 }
